--- a/views/home.pug
+++ b/views/home.pug
@@ -6,4 +6,14 @@ html(lang="en")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Hello
   body
-    h1 Hola #{name}!
+    table
+      thead
+        th Id
+        th Name
+        th Visits 
+      tbody
+        each visitor in visitors
+          tr
+            td #{visitor.id}
+            td #{visitor.name}
+            td #{visitor.count}
