--- a/views/home.pug
+++ b/views/home.pug
@@ -14,6 +14,6 @@ html(lang="en")
       tbody
         each visitor in visitors
           tr
-            td #{visitor.id}
+            td #{visitor._id}
             td #{visitor.name}
             td #{visitor.count}
