--- a/views/home.pug
+++ b/views/home.pug
@@ -6,7 +6,7 @@ html(lang="en")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Formulario de Registro
   body
-    a(href="/register") Registrarse
+    a(href="/logout") Salir
     
     table(border="1")
       thead
